--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -21,8 +21,8 @@
         <router-outlet></router-outlet>
     </div>
 
-    <div class="layout-mask"></div>
+    <div class="">   <core-footer></core-footer></div>
 
-    <core-footer></core-footer>
+
 
 </div>
