--- a/src/app/components/app-dashboard/app-dashboard.component.html
+++ b/src/app/components/app-dashboard/app-dashboard.component.html
@@ -1,1 +1,99 @@
-Dit is het dashboard
+<div class="ui-g line1">
+    <div class="ui-g-12 ui-md-8 ">
+        <div class="card card-w-title news">
+            <div class="">
+                <div class="items">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui-g-6 ui-md-4">
+        <div class="card card-w-title menu">
+
+            <div class="ui-g-12">
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="collaborateurs">
+                            <img class="image" src="./assets/layout/images/icones/collaborateurs.png" title=""
+                                 data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="prestations">
+                            <img class="image" src="./assets/layout/images/icones/conges.png" title=""
+                                 data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="collaborateurs">
+                            <img class="image" src="./assets/layout/images/icones/annuaire.png" title=""
+                                 data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="ui-g-12">
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="prestations">
+                            <img class="image" src="./assets/layout/images/icones/prestation.png" title=""
+                                 data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="collaborateurs">
+                            <img class="image" src="" title="" data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="collaborateurs">
+                            <img class="image" src="" title="" data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="ui-g-12">
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="collaborateurs">
+                            <img class="image" src="./assets/layout/images/icones/tableaudebord.png" title=""
+                                 data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="collaborateurs">
+                            <img class="image" src="./assets/layout/images/icones/referenciel.png" title=""
+                                 data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+                <div class="ui-g-4">
+                    <div class="shadow-box ui-shadow-1">
+                        <a routerLink="collaborateurs">
+                            <img class="image" src="" title="" data-themekey="#">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class=" line2">
+
+    <app-charts></app-charts>
+</div>
