--- a/src/assets/layout/css/layout-blue.css
+++ b/src/assets/layout/css/layout-blue.css
@@ -778,14 +778,14 @@
           background-image: linear-gradient(to right, #a83279, #b04167);
           filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#a83279', endColorStr='#b04167', gradientType='1'); }
         .landing-body .landing-wrapper #stats > div .component-content.development {
-          background-color: #457fca;
-          background-image: -webkit-gradient(linear, left top, right top, from(#457fca), to(#5691c8));
-          background-image: -webkit-linear-gradient(left, #457fca, #5691c8);
-          background-image: -moz-linear-gradient(left, #457fca, #5691c8);
-          background-image: -ms-linear-gradient(left, #457fca, #5691c8);
-          background-image: -o-linear-gradient(left, #457fca, #5691c8);
-          background-image: linear-gradient(to right, #457fca, #5691c8);
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#457fca', endColorStr='#5691c8', gradientType='1'); }
+          background-color: #000;
+          background-image: -webkit-gradient(linear, left top, right top, from(#000), to(#222222));
+          background-image: -webkit-linear-gradient(left, #000, #222222);
+          background-image: -moz-linear-gradient(left, #000, #222222);
+          background-image: -ms-linear-gradient(left, #000, #222222);
+          background-image: -o-linear-gradient(left, #000, #222222);
+          background-image: linear-gradient(to right, #000, #222222);
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#000', endColorStr='#222222', gradientType='1'); }
         .landing-body .landing-wrapper #stats > div .component-content.consumed {
           background-color: #563d7c;
           background-image: -webkit-gradient(linear, left top, left bottom, from(#563d7c), to(#6f5499));
@@ -1014,39 +1014,39 @@ body {
   position: fixed;
   z-index: 100;
   width: 100%;
-  height: 60px;
+  height: 90px;
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26); }
   .layout-wrapper .topbar .topbar-left {
     padding: 15px;
-    height: 60px;
+    height: 90px;
     width: 235px;
     float: left;
-    background-color: #457fca;
-    background-image: -webkit-gradient(linear, left top, right top, from(#457fca), to(#5691c8));
-    background-image: -webkit-linear-gradient(left, #457fca, #5691c8);
-    background-image: -moz-linear-gradient(left, #457fca, #5691c8);
-    background-image: -ms-linear-gradient(left, #457fca, #5691c8);
-    background-image: -o-linear-gradient(left, #457fca, #5691c8);
-    background-image: linear-gradient(to right, #457fca, #5691c8);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#457fca', endColorStr='#5691c8', gradientType='1');
+    background-color: #000;
+    background-image: -webkit-gradient(linear, left top, right top, from(#000), to(#222222));
+    background-image: -webkit-linear-gradient(left, #000, #222222);
+    background-image: -moz-linear-gradient(left, #000, #222222);
+    background-image: -ms-linear-gradient(left, #000, #222222);
+    background-image: -o-linear-gradient(left, #000, #222222);
+    background-image: linear-gradient(to right, #000, #222222);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#000', endColorStr='#222222', gradientType='1');
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25); }
     .layout-wrapper .topbar .topbar-left .topbar-logo {
-      height: 30px; }
+      height: 60px; }
   .layout-wrapper .topbar .topbar-right {
     padding: 15px;
-    height: 60px;
-    background-color: #457fca;
-    background-image: -webkit-gradient(linear, left top, right top, from(#457fca), to(#5691c8));
-    background-image: -webkit-linear-gradient(left, #457fca, #5691c8);
-    background-image: -moz-linear-gradient(left, #457fca, #5691c8);
-    background-image: -ms-linear-gradient(left, #457fca, #5691c8);
-    background-image: -o-linear-gradient(left, #457fca, #5691c8);
-    background-image: linear-gradient(to right, #457fca, #5691c8);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#457fca', endColorStr='#5691c8', gradientType='1'); }
+    height: 90px;
+    background-color: #000;
+    background-image: -webkit-gradient(linear, left top, right top, from(#000), to(#222222));
+    background-image: -webkit-linear-gradient(left, #000, #222222);
+    background-image: -moz-linear-gradient(left, #000, #222222);
+    background-image: -ms-linear-gradient(left, #000, #222222);
+    background-image: -o-linear-gradient(left, #000, #222222);
+    background-image: linear-gradient(to right, #000, #222222);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#000', endColorStr='#222222', gradientType='1'); }
     .layout-wrapper .topbar .topbar-right #menu-button {
       color: #234b7d;
       display: inline-block;
@@ -1130,7 +1130,7 @@ body {
   position: fixed;
   width: 235px;
   z-index: 99;
-  top: 60px;
+  top: 90px;
   height: 100%;
   background-color: #ffffff;
   background-image: -webkit-gradient(linear, left top, right top, from(#ffffff), to(#ffffff));
@@ -1271,7 +1271,7 @@ body {
     -ms-transform: rotate(180deg);
     transform: rotate(180deg); }
 .layout-wrapper .layout-main {
-  padding: 80px 15px 15px 15px;
+  padding: 110px 15px 15px 15px;
   -moz-transition: margin-left 0.3s;
   -o-transition: margin-left 0.3s;
   -webkit-transition: margin-left 0.3s;
@@ -1411,7 +1411,7 @@ body {
   -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25); }
   .layout-wrapper .layout-footer .footer-text-left img {
-    height: 25px; }
+    height: 60px; }
   .layout-wrapper .layout-footer .footer-text-right {
     color: #777777;
     float: right; }
@@ -1532,12 +1532,12 @@ body {
     -webkit-box-shadow: none;
     -moz-box-shadow: none; }
     .layout-wrapper.menu-layout-horizontal .topbar .topbar-left {
-      background: #457fca;
+      background: #000;
       box-shadow: none;
       -webkit-box-shadow: none;
       -moz-box-shadow: none; }
     .layout-wrapper.menu-layout-horizontal .topbar .topbar-right {
-      background: #457fca; }
+      background: #000; }
       .layout-wrapper.menu-layout-horizontal .topbar .topbar-right #menu-button {
         display: none; }
   .layout-wrapper.menu-layout-horizontal .layout-menu-container {
@@ -1546,7 +1546,7 @@ body {
     width: 100%;
     top: 60px;
     height: auto;
-    background-color: #5691c8;
+    background-color: #222222;
     -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26); }
