update icons and fix login issues

--- a/src/app/components/app-dashboard/app-dashboard.component.html
+++ b/src/app/components/app-dashboard/app-dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="ui-g line1">
-    <div class="ui-g-12 ui-md-8 ">
+    <div class="ui-g-12 ui-md-8 news-area ">
         <div class="card card-w-title news">
             <div class="">
                 <div class="items">
@@ -15,7 +15,7 @@
             <div class="ui-g-12">
                 <div class="ui-g-4">
                     <div class="shadow-box ui-shadow-1">
-                        <a routerLink="collaborateurs">
+                        <a routerLink="/collaborateurs">
                             <img class="image" src="./assets/layout/images/icones/collaborateurs.png" title=""
                                  data-themekey="#">
                         </a>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="ui-g-4">
                     <div class="shadow-box ui-shadow-1">
-                        <a routerLink="prestations">
+                        <a routerLink="/prestations">
                             <img class="image" src="./assets/layout/images/icones/conges.png" title=""
                                  data-themekey="#">
                         </a>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="ui-g-4">
                     <div class="shadow-box ui-shadow-1">
-                        <a routerLink="collaborateurs">
+                        <a routerLink="/collaborateurs">
                             <img class="image" src="./assets/layout/images/icones/annuaire.png" title=""
                                  data-themekey="#">
                         </a>
@@ -43,7 +43,7 @@
             <div class="ui-g-12">
                 <div class="ui-g-4">
                     <div class="shadow-box ui-shadow-1">
-                        <a routerLink="prestations">
+                        <a routerLink="/prestations">
                             <img class="image" src="./assets/layout/images/icones/prestation.png" title=""
                                  data-themekey="#">
                         </a>
@@ -51,14 +51,14 @@
                 </div>
                 <div class="ui-g-4">
                     <div class="shadow-box ui-shadow-1">
-                        <a routerLink="collaborateurs">
+                        <a routerLink="/collaborateurs">
                             <img class="image" src="" title="" data-themekey="#">
                         </a>
                     </div>
                 </div>
                 <div class="ui-g-4">
                     <div class="shadow-box ui-shadow-1">
-                        <a routerLink="collaborateurs">
+                        <a routerLink="/collaborateurs">
                             <img class="image" src="" title="" data-themekey="#">
                         </a>
                     </div>
