--- a/src/core/components/core-topbar/core-topbar.component.html
+++ b/src/core/components/core-topbar/core-topbar.component.html
@@ -1,5 +1,5 @@
 <div class="topbar clearfix">
-    <div class="topbar-left">
+    <div class="topbar-left" routerLink="/accueil">
         <img src="assets/layout/images/logo.png" class="topbar-logo" />
     </div>
 
