--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -198,6 +198,7 @@ body {
                 }
 
                 .profile-name {
+                    text-transform: capitalize;
                     display: block;
                     color: $textColor;
                     vertical-align: middle;
