--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,53 +1,71 @@
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <p-dialog header="Register" [resizable]="false" visible="true" responsive="true" modal="true">
-        <div class="ui-g form-group" style="margin-bottom: 16px;">
-            <div class="ui-g-12">
+        <div class=" form-group" style="margin-bottom: 16px;">
+            <div class="ui-g-6">
+                <div class="ui-g">
 
-                <div class="ui-g-12">
-                    <label for="firstName">First Name</label>
-                </div>
-                <div class="ui-g-12" style="margin-bottom:10px">
+                    <div class="ui-g-12">
+                        <label for="firstName">First Name</label>
+                    </div>
+                    <div class="ui-g-12" style="margin-bottom:10px">
 
-                    <input type="text" formControlName="firstName" class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"/></div>
-                <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-                    <div *ngIf="f.firstName.errors.required">First Name is required</div>
-                </div>
-
-
-                <div class="ui-g-12">
-
-
-                    <label for="lastName">Last Name</label>
-                </div>
-                <div class="ui-g-12" style="margin-bottom:10px">
-                    <input type="text" formControlName="lastName" class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"/></div>
-                <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-                    <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                        <input type="text" formControlName="firstName" class="form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"/>
+                    </div>
+                    <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                        <div *ngIf="f.firstName.errors.required">First Name is required</div>
+                    </div>
                 </div>
 
-                <div class="ui-g-12">
+
+                <div class="ui-g">
 
 
-                    <label for="username">Username</label>
-                </div>
-                <div class="ui-g-12" style="margin-bottom:10px">
-                    <input type="text" formControlName="username" class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/></div>
-                <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                    <div *ngIf="f.username.errors.required">Username is required</div>
+                    <div class="ui-g-12">
+
+
+                        <label for="lastName">Last Name</label>
+                    </div>
+                    <div class="ui-g-12" style="margin-bottom:10px">
+                        <input type="text" formControlName="lastName" class="form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"/>
+                    </div>
+                    <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                        <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                    </div>
                 </div>
 
-                <div class="ui-g-12">
-                    <label for="password">Password</label>
+
+                <div class="ui-g">
+
+                    <div class="ui-g-12">
+
+
+                        <label for="lastName">Last Name</label>
+                    </div>
+                    <div class="ui-g-12" style="margin-bottom:10px">
+                        <input type="text" formControlName="username" class="form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
+                    </div>
+                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                        <div *ngIf="f.username.errors.required">Username is required</div>
+                    </div>
                 </div>
-                <div class="ui-g-12" style="margin-bottom:10px">
-                    <input type="password" formControlName="password" class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/></div>
-                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
-                    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+
+                <div class="ui-g">
+
+                    <div class="ui-g-12">
+                        <label for="Password">Password</label>
+                    </div>
+
+                    <div class="ui-g-12" style="margin-bottom:10px">
+                        <input type="password" formControlName="password" class="form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
+                    </div>
+                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                    </div>
                 </div>
             </div>
         </div>
