fix login issues and routes issues

--- a/src/app/components/app-dashboard/app-dashboard.component.html
+++ b/src/app/components/app-dashboard/app-dashboard.component.html
@@ -13,7 +13,7 @@
         <div class="card card-w-title menu">
 
             <div class="ui-g-12">
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="/collaborateurs">
                             <img class="image" src="./assets/layout/images/icones/collaborateurs.png" title=""
@@ -21,7 +21,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="/prestations">
                             <img class="image" src="./assets/layout/images/icones/conges.png" title=""
@@ -29,7 +29,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="/collaborateurs">
                             <img class="image" src="./assets/layout/images/icones/annuaire.png" title=""
@@ -41,7 +41,7 @@
 
 
             <div class="ui-g-12">
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="/prestations">
                             <img class="image" src="./assets/layout/images/icones/prestation.png" title=""
@@ -49,14 +49,14 @@
                         </a>
                     </div>
                 </div>
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="/collaborateurs">
                             <img class="image" src="" title="" data-themekey="#">
                         </a>
                     </div>
                 </div>
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="/collaborateurs">
                             <img class="image" src="" title="" data-themekey="#">
@@ -66,7 +66,7 @@
             </div>
 
             <div class="ui-g-12">
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="collaborateurs">
                             <img class="image" src="./assets/layout/images/icones/tableaudebord.png" title=""
@@ -74,7 +74,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="collaborateurs">
                             <img class="image" src="./assets/layout/images/icones/referenciel.png" title=""
@@ -82,7 +82,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="ui-g-4">
+                <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="collaborateurs">
                             <img class="image" src="" title="" data-themekey="#">
