--- a/src/app/components/app-dashboard/app-dashboard.component.scss
+++ b/src/app/components/app-dashboard/app-dashboard.component.scss
@@ -78,7 +78,7 @@
     transition-property: transform;
 }
 
-.image:hover {
+.case:hover .image{
     overflow: hidden;
     transition-duration: 0.5s;
     transition-property: transform;
