--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -34,6 +34,74 @@
         <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
     </div>
 </p-toolbar>
+<p-dataView #dv1 [style]="{'padding': '20px'}" [value]="collaborateurs" [paginator]="true" [rows]="10" paginatorPosition="both" filterBy="brand"
+            [sortField]="sortField" [sortOrder]="sortOrder">
+    <p-header>
+
+        <div class="ui-helper-clearfix">
+            <div class="ui-g">
+                <div class="ui-g-12 ui-md-4">
+                    <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By"
+                                (onChange)="onSortChange($event)" [autoWidth]="false" [style]="{'min-width':'15em'}"></p-dropdown>
+                </div>
+                <div class="ui-g-6 ui-md-4 filter-container">
+                    <div style="position:relative">
+                        <input type="search" pInputText placeholder="Search by brand" (keyup)="dv1.filter($event.target.value)">
+                    </div>
+                </div>
+                <div class="ui-g-6 ui-md-4" style="text-align:right">
+                    <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
+                </div>
+
+            </div>
+        </div>
+    </p-header>
+    <ng-template let-collaborateur pTemplate="listItem">
+        <div class="ui-g" style="border: 1px solid #d9d9d9">
+
+
+
+            <div class="ui-g-10 ui-md-9 car-details">
+                <div class="ui-g-1 ui-sm-6">Vin:</div>
+                <div class="ui-g-1 ui-sm-6"><b>{{collaborateur.nom}}</b></div>
+
+                <div class="ui-g-1 ui-sm-6">Year:</div>
+                <div class="ui-g-1 ui-sm-6"><b>{{collaborateur.prenom}}</b></div>
+
+                <div class="ui-g-1 ui-sm-6">Year:</div>
+                <div class="ui-g-1 ui-sm-6"><b>{{collaborateur.prenom}}</b></div>
+
+                <div class="ui-g-1 ui-sm-6">Year:</div>
+                <div class="ui-g-1 ui-sm-6"><b>{{collaborateur.prenom}}</b></div>
+
+                <div class="ui-g-1 ui-sm-6">Year:</div>
+                <div class="ui-g-1 ui-sm-6"><b>{{collaborateur.prenom}}</b></div>
+
+
+            </div>
+            <div class="ui-g-1 ui-md-2 search-icon">
+                <button pButton type="button" icon="pi pi-search" (click)="selectCar($event, collaborateur)"></button>
+                <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
+                <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
+            </div>
+        </div>
+
+    </ng-template>
+
+
+    <ng-template let-car pTemplate="gridItem">
+        <div style="padding:.5em" class="ui-g-6 ui-md-2">
+            <p-panel [header]="car.vin" [style]="{'text-align':'center'}">
+                <img src="assets/showcase/images/demo/car/{{car.brand}}.png" width="120">
+                <div class="car-detail">{{car.year}} - {{car.color}}</div>
+                <hr class="ui-widget-content" style="border-top:0">
+                <button pButton type="button" icon="pi pi-search" (click)="selectCar($event, car)"
+                        style="margin-top:0"></button>
+            </p-panel>
+        </div>
+
+    </ng-template>
+</p-dataView>
 <p-dataView #dv [style]="{'padding': '20px'}" [value]="cars" [paginator]="true" [rows]="10" paginatorPosition="both" filterBy="brand"
             [sortField]="sortField" [sortOrder]="sortOrder">
     <p-header>
