--- a/src/demo2/view/dashboard.component.html
+++ b/src/demo2/view/dashboard.component.html
@@ -390,7 +390,7 @@
             </p-panel>
 
             <p-panel header="Recent Sales">
-                <p-table [columns]="cols" [value]="cars" selectionMode="single" dataKey="vin" [(selection)]="selectedCar">
+                <p-table [columns]="cols" [value]="cars" selectionMode="single" dataKey="vin" [(selection)]="selectedCollaborateur">
                     <ng-template pTemplate="caption">
                         Recent Sales
                     </ng-template>
