--- a/src/demo2/view/datademo.component.html
+++ b/src/demo2/view/datademo.component.html
@@ -2,7 +2,7 @@
     <div class="ui-g-12">
         <div class="card card-w-title">
             <h1>DataTable</h1>
-            <p-table [columns]="cols" [value]="cars1" selectionMode="single" dataKey="vin" [(selection)]="selectedCar"
+            <p-table [columns]="cols" [value]="cars1" selectionMode="single" dataKey="vin" [(selection)]="selectedCollaborateur"
                      [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="bottom">
                 <ng-template pTemplate="caption">
                     List of Cars
