--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -20,20 +20,18 @@
   </div>
 </div>-->
 <p-toolbar>
-    <div class="ui-toolbar-group-left">
-        <button pButton type="button" label="New" icon="pi pi-plus"></button>
-        <button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>
-
-        <i class="pi pi-bars"></i>
-
-    </div>
-
     <div class="ui-toolbar-group-right">
-        <button pButton type="button" icon="pi pi-search"></button>
-        <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
-        <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
+    <button pButton type="button" label="New" icon="pi pi-plus"></button>
+    <!--<button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>-->
+    <!--<i class="pi pi-bars"></i>-->
     </div>
 </p-toolbar>
+<div >
+    <h1> </h1>
+    <!--<button pButton type="button" label="New" icon="pi pi-plus"></button>-->
+    <!--<button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>-->
+    <!--<i class="pi pi-bars"></i>-->
+</div>
 
 <p-table #tt [columns]="cols" [value]="collaborateurs" [paginator]="true" [rows]="10">
     <ng-template pTemplate="caption">
@@ -55,6 +53,13 @@
 
             <td *ngFor="let col of columns">
                 {{rowData[col.field]}}
+            </td>
+            <td >
+                <div class="ui-toolbar-group-right">
+                    <button pButton type="button" icon="pi pi-search"></button>
+                    <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
+                    <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
+                </div>
             </td>
         </tr>
 
