--- a/src/app/component/prestations/prestations.component.html
+++ b/src/app/component/prestations/prestations.component.html
@@ -20,18 +20,17 @@
   </div>
 </div>-->
 <p-toolbar>
-       <div class="ui-toolbar-group-left">
+       <div class="ui-toolbar-group-right">
         <button pButton type="button" label="New" icon="pi pi-plus"></button>
-        <button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>
-        <i class="pi pi-bars"></i>
+        <!--<button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>-->
+        <!--<i class="pi pi-bars"></i>-->
         </div>
 
-        <div class="ui-toolbar-group-right">
-        <button pButton type="button" icon="pi pi-search"></button>
-        <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
-        <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
-    </div>
+
 </p-toolbar>
+<div >
+   <p></p>
+</div>
 <p-table #tt [columns]="cols" [value]="prestations" [paginator]="true" [rows]="10">
         <ng-template pTemplate="caption">
         <div class="ui-toolbar-group-left">PRESTATIONS</div>
@@ -52,6 +51,13 @@
 
             <td *ngFor="let col of columns">
                 {{rowData[col.field]}}
+            </td>
+            <td>
+                <div class="ui-toolbar-group-right">
+                    <button pButton type="button" icon="pi pi-search"></button>
+                    <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
+                    <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
+                </div>
             </td>
         </tr>
 
