--- a/src/app/component/newCollaborateur/newCollaborateur.component.html
+++ b/src/app/component/newCollaborateur/newCollaborateur.component.html
@@ -6,33 +6,53 @@
 
         <div class="ui-g" >
 
-            <div class="ui-g-9 ui-g-nopad">
-                <div class="ui-g-12">
-                    <label for="username">Username</label>
-                </div>
-                <div class="ui-g-12">
+            <div class="csv-file-chooser-section">
 
-                    <input pInputText type="text" formControlName="username" class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
-                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                        <div *ngIf="f.username.errors.required">Username is required</div>
-                    </div>
-                </div>
+                <input type="file" #fileImportInput name="File Upload" id="txtFileUpload" (change)="fileChangeListener($event)" accept=".csv" />
 
-
-                <div class="ui-g-12">
-                    <label for="password">Password</label>
-                </div>
-                <div class="ui-g-12">
-                    <input pPassword type="password" formControlName="password" class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
-                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
-                    </div>
-                </div>
             </div>
-            <div class="ui-g-3">
-                <img style="'float:left;margin:0 ; padding:0'" draggable="false" src="../../../assets/layout/images/icones/logo_ATG2mini.png"  />
+
+            <div class="csv-result-table">
+
+                <table>
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone Number</th>
+                        <th>Title</th>
+                        <th>Occupation</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let csvData of csvRecords;let i = index;">
+
+                        <td>{{i+1}}</td>
+                        <td>
+                            <span>{{csvData.firstName}}</span>
+                        </td>
+                        <td>
+                            <span>{{csvData.lastName}}</span>
+                        </td>
+                        <td>
+                            <span>{{csvData.email}}</span>
+                        </td>
+                        <td>
+                            <span>{{csvData.phoneNumber}}</span>
+                        </td>
+                        <td>
+                            <span>{{csvData.title}}</span>
+                        </td>
+                        <td>
+                            <span>{{csvData.occupation}}</span>
+                        </td>
+
+                    </tr>
+                    </tbody>
+                </table>
+
             </div>
 
 
