commented submitted and event

--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -21,7 +21,7 @@
 </div>-->
 <p-toolbar>
     <div class="ui-toolbar-group-right">
-    <button pButton type="button" label="New" icon="pi pi-plus" (click)="afficherLaSaisie(event)"></button>
+    <button pButton type="button" label="New" icon="pi pi-plus" (click)="afficherLaSaisie()"></button>
     <!--<p-button pButton type="button" label="New" icon="pi pi-plus" (onClick)="afficherLaSaisie($event)"></p-button>-->
     <!--<button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>-->
     <!--<i class="pi pi-bars"></i>-->
@@ -262,7 +262,7 @@
         </div>
     <p-footer>
         <div class="ui-dialog-buttonpane ui-helper-clearfix">
-        <button pButton type="button" label="Save" icon="pi pi-upload" class="ui-button-success" (click)="saveNewCollaborateur(event)"></button>
+        <button pButton type="button" label="Save" icon="pi pi-upload" class="ui-button-success" (click)="saveNewCollaborateur()"></button>
         </div>
     </p-footer>
 
