--- a/src/app/component/newCollaborateur/newCollaborateur.component.html
+++ b/src/app/component/newCollaborateur/newCollaborateur.component.html
@@ -1,5 +1,6 @@
+<!--
 
-<!--<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">-->
+&lt;!&ndash;<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">&ndash;&gt;
 
     <p-dialog header="Login" [resizable]="true" visible="true" responsive="true"
               modal="true" [styleClass]="">
@@ -48,8 +49,9 @@
         </p-footer>
 
     </p-dialog>
-<!--</form>-->
+&lt;!&ndash;</form>&ndash;&gt;
 
 
 
 
+-->
