--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -93,6 +93,11 @@
             </div>
         </div>
     </div>
+    <div class="ui-g-12 ui-md-12" style="padding:0px 16px">
+        <div class="panel-gray title" style="width:100%; text-align:center">
+            <span class=" white">Tableau de bord des Assistances Techniques de la SG au </span><span style="background:white">{{at_date}}</span>
+        </div>
+    </div>
 </div>
 <div class=" line2">
 
