--- a/src/app/component/charts/charts.component.html
+++ b/src/app/component/charts/charts.component.html
@@ -1,7 +1,7 @@
     <div class=" charts">
         <div class="ui-g-6 ui-lg-6 charts1">
             <div class="card">
-                <h1 class="centerText">Pie Chart</h1>
+                <h5 class="centerText">Taux de sous-traitance</h5>
                 <div class="chart">
 
                     <p-chart type="pie" [data]="pieData"></p-chart>
@@ -11,7 +11,7 @@
 
         <div class="ui-g-6 ui-lg-6 charts2">
             <div class="card">
-                <h1 class="centerText">Linear Chart</h1>
+                <h5 class="centerText">Evolution du nombre de sous-traitants par département sur 6 mois</h5>
                 <div class="chart">
                     <p-chart type="line" [data]="lineData"></p-chart>
                 </div>
