--- a/src/app/component/app-dashboard/app-dashboard.component.scss
+++ b/src/app/component/app-dashboard/app-dashboard.component.scss
@@ -29,6 +29,18 @@
     text-align: center;
 }
 
+.panel-gray {
+    background-color: #607D8B;
+    padding : 3px;
+    border-radius : 4px;
+}
+.text-white {
+    text-color : white;
+}
+.title {
+    font-size : 1.3em;
+}
+
 .shadow-box {
     background-color: #607D8B;
     position: relative;
