--- a/src/app/component/alert/alert.component.html
+++ b/src/app/component/alert/alert.component.html
@@ -1,4 +1,6 @@
-<div *ngIf="message"
+<!--<div *ngIf="message"
      [ngClass]="{ 'alert': message, 'alert-success': message.type === 'success', 'alert-danger': message.type === 'error' }">
     {{message.text}}
-</div>
+</div>-->
+
+<p-messages [(value)]="msgs" [closable]="true"></p-messages>
