--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -41,7 +41,7 @@
     </ng-template>
 </p-table>
 
-<p-dialog header="New Collaborateur" [(visible)]="displayDialog" [responsive]="true" [modal]="true">
+<p-dialog header="New Collaborateur" [(visible)]="displayDialog" [responsive]="true" [modal]="true" [width]="800">
 
 
     <p-tabView>
