--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
     <p-dialog header="Login" [resizable]="true" visible="true" responsive="true"
-              modal="true" [styleClass]="">
+              modal="true" [width]="600">
 
         <div class="ui-g" style="" >
 
