optimise alert message 3

--- a/src/app/component/alert/alert.component.html
+++ b/src/app/component/alert/alert.component.html
@@ -3,4 +3,4 @@
     {{message.text}}
 </div>-->
 
-<p-messages [(value)]="msgs" [closable]="true"></p-messages>
+<p-growl [(value)]="msgs"></p-growl>
