--- a/src/app/component/collaborateurs/collaborateurs.component.css
+++ b/src/app/component/collaborateurs/collaborateurs.component.css
@@ -19,3 +19,10 @@ ui-datatable-data> tr> td {
     max-width: 100px;
     border: 1px solid  #0C0213;
 }
+
+
+
+::ng-deep .importcsv {
+    width: 95% !important;
+}
+
